  AbstractEntityConnectionProvider, connection validity check scheduler moved to DefaultEntityApplicationModel
  NavigableImagePanel.centerImage(Point) and centerImage(Coordinates) added
  Controls.toggleControl() overloaded with name parameter
  SerializationWhitelist now supports simple wildcard entries org.jminor.* or org.jminor.common.Value*
  A couple of third party dependencies upgraded
  EntityUiUtil.createEastButtonPanel() moved to UiUtil, button size now follows preferred size of centerComponent
  UiUtil.prepareScrollPanelDialog() no longer adds a double click action to the component
  EntityLookupField.setSelectionProvider() added, now supports EntityTablePanel based selection via EntityLookupField.TableSelectionProvider
  LocalEntityConnectionProvider and HttpEntityConnectionProvider can now be instantiated without the required system properties, fail on connect if those are missing
0.12.0 [client/server incompatible with earlier versions due to date based data type changes]
  Minor code cleanup
  FilteredTablePanel, EntityTablePanel, ColumnConditionPanel, disappearing horizontal scroll bar bug fixed, focus related bugs fixed
  Migrate from java.util.Date to java.time
  IntelliJ code analysis, Sonar run
  DateUtil, removed methods that have become redundant with the new java.time api
  ColumnConditionModel no longer based on java.sql.Types, replaced with typeClass (Class)
  Column.isSearchable() removed, not used anywhere
  ColumnSummary and related classes refactored, now uses streams for most things
  EntityTableModel.get/setQueryConditionRequired() replaced with getQueryConditionRequiredState()
  EntityConditionPanel removed, pretty much redundant, query condition required action moved to EntityTablePanel popup menu via EntityTableConditionPanel.getControls()
  Entity.OrderBy refactored, no longer uses a Map for the property order
  DefaultLocalEntityConnection, some minor refactoring