@@ -7,13 +7,13 @@ import org.jminor.common.TaskScheduler;
 import org.jminor.common.i18n.Messages;
 import org.jminor.swing.common.ui.UiUtil;
 import org.jminor.swing.common.ui.ValueLinks;
-import org.jminor.swing.common.ui.control.ControlProvider;
 import org.jminor.swing.common.ui.control.Controls;
 import org.jminor.swing.common.ui.table.FilteredTablePanel;
 import org.jminor.swing.framework.server.monitor.ClientMonitor;
 import org.jminor.swing.framework.server.monitor.ClientUserMonitor;
 
 import javax.swing.BorderFactory;
+import javax.swing.JButton;
 import javax.swing.JComboBox;
 import javax.swing.JComponent;
 import javax.swing.JLabel;
@@ -87,7 +87,7 @@ public final class ClientUserMonitorPanel extends JPanel {
     clientUserBase.add(userScroller);
 
     clientTypeBase.add(clientUserBase, BorderLayout.CENTER);
-    clientTypeBase.add(ControlProvider.createButton(Controls.control(model::refresh, "Refresh")), BorderLayout.SOUTH);
+    clientTypeBase.add(new JButton(Controls.control(model::refresh, "Refresh")), BorderLayout.SOUTH);
 
     final JPanel actionBase = new JPanel(UiUtil.createFlowLayout(FlowLayout.LEFT));
     actionBase.add(new JLabel("Reaper interval (s)", JLabel.RIGHT));
@@ -100,9 +100,9 @@ public final class ClientUserMonitorPanel extends JPanel {
     actionBase.add(spnConnectionTimeout);
 
     actionBase.setBorder(BorderFactory.createTitledBorder("Remote connection controls"));
-    actionBase.add(ControlProvider.createButton(Controls.control(model::disconnectTimedOut,
+    actionBase.add(new JButton(Controls.control(model::disconnectTimedOut,
             "Disconnect idle", null, "Disconnect those that have exceeded the allowed idle time")));
-    actionBase.add(ControlProvider.createButton(Controls.control(this::disconnectAll,
+    actionBase.add(new JButton(Controls.control(this::disconnectAll,
             "Disconnect all", null, "Disconnect all clients")));
 
     setLayout(new BorderLayout());
@@ -134,7 +134,7 @@ public final class ClientUserMonitorPanel extends JPanel {
 
     final JPanel configBase = new JPanel(UiUtil.createBorderLayout());
     configBase.add(configPanel, BorderLayout.CENTER);
-    configBase.add(ControlProvider.createButton(Controls.control(model::resetHistory, "Reset")), BorderLayout.EAST);
+    configBase.add(new JButton(Controls.control(model::resetHistory, "Reset")), BorderLayout.EAST);
 
     final FilteredTablePanel userHistoryTable = new FilteredTablePanel(model.getUserHistoryTableModel());
 
