@@ -4974,3 +4974,4 @@
   EntityConditionPanel removed, pretty much redundant, query condition required action moved to EntityTablePanel popup menu via EntityTableConditionPanel.getControls()
   Entity.OrderBy refactored, no longer uses a Map for the property order
   DefaultLocalEntityConnection, some minor refactoring
+  ControlProvider.createButton() removed
